Fixed music player, cleaned and optimized code, added Gradle settings to repo